--- a/config/yolov3-tiny.cfg
+++ b/config/yolov3-tiny.cfg
@@ -3,7 +3,7 @@
 #batch=1
 #subdivisions=1
 # Training
-batch=64
+batch=32
 subdivisions=2
 width=416
 height=416
@@ -12,14 +12,14 @@ momentum=0.9
 decay=0.0005
 angle=0
 saturation = 1.5
-exposure = 1.5
+exposure=1.5
 hue=.1
 
 learning_rate=0.0001
 burn_in=1000
 max_batches = 500200
 policy=steps
-steps=400000,450000
+steps= 40000, 45000
 scales=.1,.1
 
 # 0
