change git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-
-.DS_Store
-build
-.git
-*.egg-info
-dist
-output/
-data/*
-backup
-weights/*.weights
-weights/*.conv.*
-__pycache__
-checkpoints/
-
-.vscode/
-logs/
-
-.python-version
+/**/*.pth
+/**/*.weights
+/weights/darknet53.conv.74
+/data/custom
+/data/samples
+/data/output
+/**/*.pyc
+/cuda-test-data
+/train_results/train_result.png
